# loom

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/agents/: documenter.agent.md  implementer.agent.md  paper-critic.agent.md  tester.agent.md
brenda/: Cargo.toml
brenda/src/: lib.rs
brenda/src/indexer/: alphabet.rs  builder.rs  corpus.rs  encrypt.rs  memory_profiler.rs  mod.rs  ontology.rs  ops_slo.rs  sections.rs  shards.rs  vocab.rs
brenda/src/search/: federated.rs  mod.rs  query.rs  results.rs
data/crispr_guides/: emx1_validation.json  extended_insilico_52.json  fm_index_verification.json  insilico_characterization_52.json  novel_52_guides.tsv  novel_targets_52.json  novel_targets_for_conservation.tsv  novel_targets_fullscale.json  novel_targets_same_corpus.json  novel_targets_validated.json  offtarget_human_grch38.json  offtargets_novel52_grch38_3mm.csv  offtargets_novel52_pig_3mm.csv  patent_scan_report.json  published_guides_fullscale.json  table_s10_lineage_conservation.json  table_s10_lineage_conservation.md  unique_23mer_counts.json
scripts/: audit-paper-consistency.sh  audit_claims.py  build-preprints.sh  compile_published_guides.py  compute_clinvar_resistance.py  compute_cross_reactivity.sh  compute_cross_reactivity_cas12a.sh  compute_diagnostic_priority.py  compute_extended_insilico.py  compute_guide_scores.py  compute_insilico_signals.py  compute_lineage_distribution.py  compute_published_seed_analysis.py  compute_rnafold.py  compute_seed_conservation.py  overnight_ontology_integration.sh  overnight_openscience.sh  patent_scan.py  pubmed_scan.py  pubmed_scan_v3.py  rebuild_all_json.py  recount_crispr_targets.py  scan_crispr_targets.py  spot_check_claims.py  spot_check_part2.py  validate_emx1_benchmark.py  validate_loom_blast.py  validate_loom_methodology.py  verify-citations.py  verify-paper-claims.py
src/: lib.rs  main.rs  wasm.rs
tests/: encrypt_tests.rs  test_pubmed_queries.py
web/: .gitignore  README.md  annotated-brief.html  annotated-panpathogen.html  crispr-animal.html  crispr-app.js  crispr-search.html  crispr-styles.css  help.html  index.html  learn.html  learn.js  loom-worker.js  methodology.html  staticwebapp.config.json
(+43 files in other folders)
