[package]
name = "loom"
version = "0.1.0"
edition = "2024"
description = "BWT-powered exact-retrieval engine for open-science genomics"
license = "MIT"
autobins = false

[[bin]]
name = "loom"
path = "src/main.rs"

[workspace]
members = ["brenda"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core index + search engine
brenda = { path = "brenda" }

# FM-index implementation
fm-index = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
postcard = { version = "1", features = ["alloc", "use-std"] }
chrono = "0.4"

# File walking
walkdir = "2"

# Progress bars
indicatif = "0.17"

# CSV I/O
csv = "1"

# Parallelism
rayon = "1"

# Multi-pattern matching
aho-corasick = "1"

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Encryption (Lane 5)
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
tempfile = "3"

# Streaming decompression (streaming-corpus-ingest-v1)
flate2 = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
xz2 = "0.1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
